# minde

./: Makefile  evolutionary_distribution_generation.ipynb  images_example.ipynb  mutinfo_experiments.ipynb  prova_load_checkpoints.ipynb  pyproject.toml  quickstart.ipynb
discrete_distributions/: best_distribution_dim10_mutinfo01.npy  best_distribution_dim15_mutinfo01.npy
minde/: minde.py
minde/baseline/: eval_doe.py
minde/evaluate/: process.py  prova.ipynb  run.py  run_exp.sh  run_img_exp.py  test_utils.py
minde/evaluate/config.d/: config.yaml  config_image_tests.yaml  config_mixed.yaml
minde/evaluate/config.d/distribution/: CorrelatedNormal.yaml  CorrelatedStudent.yaml  GammaExponential.yaml  LogGammaExponential.yaml  Mixed.yaml  ShiftedNormal.yaml  SmoothedUniform.yaml  UniformlyQuantized.yaml  bernoulli.yaml  categorical.yaml  gaussian_field.yaml  multiplicative.yaml  rectangle.yaml
minde/evaluate/config.d/distribution/rv_1/: Normal1.yaml
minde/evaluate/config.d/distribution/rv_2/: Normal2.yaml
minde/evaluate/config.d/distribution/samples/: mnist.yaml
minde/evaluate/config.d/estimator/: minde.yaml  minde_conv.yaml  minde_mlp.yaml  minde_unet.yaml  minde_unet_checkpointed.yaml
minde/libs/: SDE.py  distribution_generator.py  info_measures.py  mixed_rv.py  multiplicative_rv.py  preprocessing_utils.py  util.py
minde/models/: conv.py  mlp.py  unet.py
minde/scripts/: config.py  helper.py  run_discrete_benchmark.py  run_discrete_benchmark_job.sh  run_minde.py
